fix(api): les deux derniers ecarts tranches, les deux irreductibles epingles
Les 403 scenarios de parite passent contre un vrai MongoDB et un vrai
PostgreSQL.

Tranches, dans le sens de la correction :
- save sans uuid : MongoDB inserait avec un _id ObjectId, que le lecteur
  plaquait ensuite sur le champ uuid String — une ligne que personne ne
  pouvait relire, modifier ni supprimer par uuid. Les deux DAO refusent
  desormais, avec le meme message. L'api tamponne un uuid avant chaque save :
  ce cas ne faisait qu'attraper un bogue.
- @Composed declaree en String : MongoDB refuse (elle attend l'entite
  referencee), PostgreSQL acceptait. Aucune application ne peut en dependre
  puisque MongoDB plante : PostgreSQL refuse de meme.

Epingles, irreductibles, documentes — et testes pour qu'un changement se voie :
- U+0000 : PostgreSQL TEXT et JSONB ne peuvent pas le stocker ; refus avec le
  champ nomme. L'echapper serait fidele au stockage seulement : regex, $text,
  tris et prefixes verraient l'echappement, pas le caractere.
- un champ Object portant un Long revient Integer : JSON n'a qu'un type
  numerique. Etiqueter le type dans le JSONB ferait comparer chaque filtre
  a l'etiquette au lieu du nombre — un ecart echange contre un pire. Les
  champs types (long, Long) ne sont pas concernes : leur colonne est BIGINT.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>